force-app/main/default/objects/Batch_Events__e/Batch_Events__e.object-meta.xml
<CustomObject>
    <label>Batch Event</label>
    <pluralLabel>Batch Events</pluralLabel>
</CustomObject>