force-app/main/default/objects/Batch_Events__e/fields/Event_Info__c.field-meta.xml
<CustomField>
    <fullName>Event_Info__c</fullName>
    <label>Event Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>