force-app/main/default/objects/Batch_Events__e/fields/Event_Publisher__c.field-meta.xml
<CustomField>
    <fullName>Event_Publisher__c</fullName>
    <label>Event Publisher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>