force-app/main/default/objects/Batch_Events__e/fields/Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Record_Ids__c</fullName>
    <label>Record_Ids</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>